--- a/packages/epetra/test/MultiVector/CMakeLists.txt
+++ b/packages/epetra/test/MultiVector/CMakeLists.txt
@@ -7,3 +7,13 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   NUM_MPI_PROCS 1
   FAIL_REGULAR_EXPRESSION "tests FAILED"
   )
+
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  Bug7758
+  SOURCES
+    Bug7758
+  COMM serial mpi
+  FAIL_REGULAR_EXPRESSION "TEST FAILED"
+  PASS_REGULAR_EXPRESSION "TEST PASSED"
+  )
+
