--- a/packages/muelu/test/scaling/CMakeLists.txt
+++ b/packages/muelu/test/scaling/CMakeLists.txt
@@ -447,8 +447,10 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Epetra)
 
   TRIBITS_ADD_TEST(
     SpMVPerformance
+    NAME_POSTFIX "Tpetra"
     COMM mpi
     NUM_MPI_PROCS 1
+    ARGS "--linAlgebra=Tpetra --nx=120 --ny=120 --nz=120 --matrixType=Laplace3D --num-runs=1000"
     PASS_REGULAR_EXPRESSION "Complete"
     RUN_SERIAL
     CATEGORIES PERFORMANCE
@@ -456,8 +458,32 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Epetra)
 
   TRIBITS_ADD_TEST(
     SpMVPerformance
+    NAME_POSTFIX "Tpetra"
     COMM mpi
     NUM_MPI_PROCS 4
+    ARGS "--linAlgebra=Tpetra --nx=120 --ny=120 --nz=120 --matrixType=Laplace3D --num-runs=1000"
+    PASS_REGULAR_EXPRESSION "Complete"
+    RUN_SERIAL
+    CATEGORIES PERFORMANCE
+  )
+
+  TRIBITS_ADD_TEST(
+    SpMVPerformance
+    NAME_POSTFIX "Epetra"
+    COMM mpi
+    NUM_MPI_PROCS 1
+    ARGS "--linAlgebra=Epetra --nx=120 --ny=120 --nz=120 --matrixType=Laplace3D --num-runs=1000"
+    PASS_REGULAR_EXPRESSION "Complete"
+    RUN_SERIAL
+    CATEGORIES PERFORMANCE
+  )
+
+  TRIBITS_ADD_TEST(
+    SpMVPerformance
+    NAME_POSTFIX "Epetra"
+    COMM mpi
+    NUM_MPI_PROCS 4
+    ARGS "--linAlgebra=Epetra --nx=120 --ny=120 --nz=120 --matrixType=Laplace3D --num-runs=1000"
     PASS_REGULAR_EXPRESSION "Complete"
     RUN_SERIAL
     CATEGORIES PERFORMANCE
