MueLu: rename regionMG/examples/ to regionMG/test/
Since this folder contains tests, it should be named accordingly.
Of course, tests also serve as some kind of examples as well.

Part of #7824.

--- a/packages/muelu/research/regionMG/CMakeLists.txt
+++ b/packages/muelu/research/regionMG/CMakeLists.txt
@@ -1,7 +1,7 @@
 # based on experimental code
 IF (${PACKAGE_NAME}_ENABLE_Experimental)
   ADD_SUBDIRECTORY(src)
-  ADD_SUBDIRECTORY(examples)
+  ADD_SUBDIRECTORY(test)
 ENDIF()
 
 
