epetra:  adding test to compare behavior to tpetra for #7758

--- a/packages/epetra/test/MultiVector/CMakeLists.txt
+++ b/packages/epetra/test/MultiVector/CMakeLists.txt
@@ -1,3 +1,10 @@
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  Bug7758
+  SOURCES Bug7758.cpp
+  COMM mpi serial
+  FAIL_REGULAR_EXPRESSION "TEST FAILED"
+  PASS_REGULAR_EXPRESSION "TEST PASSED"
+  )
 
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
   MultiVector_test
