Framework: PR Framework - Temporarily disable SEMS Python

--- a/cmake/std/configs/trilinos_pr.ini
+++ b/cmake/std/configs/trilinos_pr.ini
@@ -160,7 +160,7 @@ module-load sems-scotch   : 6.0.3/nopthread_64bit_parallel
 module-load sems-superlu  : 4.3/base
 module-load sems-git      : 2.10.1
 module-load sems-cmake    : 3.10.3
-module-load sems-python   : 2.7.9
+#module-load sems-python   : 2.7.9      # SCAFFOLDING (TESTING)
 setenv OMP_NUM_THREADS    : 2
 
 
