Tpetra: Add CUDA_LAUNCH_BLOCKING versions of Performance-CGSolve tests

--- a/packages/tpetra/core/test/PerformanceCGSolve/CMakeLists.txt
+++ b/packages/tpetra/core/test/PerformanceCGSolve/CMakeLists.txt
@@ -76,6 +76,70 @@ IF (Tpetra_INST_DOUBLE)
       CATEGORIES PERFORMANCE
     )
 
+    IF (Tpetra_ENABLE_CUDA)
+        MESSAGE(STATUS "Tpetra: Performance-CGSolve CUDA_LAUNCH_BLOCKING test ENABLED")
+
+        TRIBITS_ADD_TEST(
+          Performance-CGSolve
+          NAME Performance_StrongScaling_CGSolve_CUDA_LAUNCH_BLOCKING
+          ARGS "--size=200"
+          COMM mpi
+          NUM_MPI_PROCS 1
+          ENVIRONMENT CUDA_LAUNCH_BLOCKING=1
+          STANDARD_PASS_OUTPUT
+          RUN_SERIAL
+          CATEGORIES PERFORMANCE
+        )
+
+        TRIBITS_ADD_TEST(
+          Performance-CGSolve
+          NAME Performance_StrongScaling_CGSolve_CUDA_LAUNCH_BLOCKING
+          ARGS "--size=200"
+          COMM mpi
+          NUM_MPI_PROCS 4
+          ENVIRONMENT CUDA_LAUNCH_BLOCKING=1
+          STANDARD_PASS_OUTPUT
+          RUN_SERIAL
+          CATEGORIES PERFORMANCE
+        )
+
+        TRIBITS_ADD_TEST(
+          Performance-CGSolve
+          NAME Performance_StrongScaling_CGSolve_CUDA_LAUNCH_BLOCKING
+          ARGS "--size=200"
+          COMM mpi
+          NUM_MPI_PROCS 9
+          ENVIRONMENT CUDA_LAUNCH_BLOCKING=1
+          STANDARD_PASS_OUTPUT
+          RUN_SERIAL
+          CATEGORIES PERFORMANCE
+        )
+
+        TRIBITS_ADD_TEST(
+          Performance-CGSolve
+          NAME Performance_StrongScaling_CGSolve_CUDA_LAUNCH_BLOCKING
+          ARGS "--size=200"
+          COMM mpi
+          NUM_MPI_PROCS 16
+          ENVIRONMENT CUDA_LAUNCH_BLOCKING=1
+          STANDARD_PASS_OUTPUT
+          RUN_SERIAL
+          CATEGORIES PERFORMANCE
+        )
+
+        TRIBITS_ADD_TEST(
+          Performance-CGSolve
+          NAME Performance_StrongScaling_CGSolve_CUDA_LAUNCH_BLOCKING
+          ARGS "--size=200"
+          COMM mpi
+          NUM_MPI_PROCS 25
+          ENVIRONMENT CUDA_LAUNCH_BLOCKING=1
+          STANDARD_PASS_OUTPUT
+          RUN_SERIAL
+          CATEGORIES PERFORMANCE
+        )
+    ENDIF()
+
 ENDIF()
 
 #TRIBITS_COPY_FILES_TO_BINARY_DIR(CopyXmlForTpetraPerfCgSolve
