tpetra:  adding tests for bug 7745

--- a/packages/tpetra/core/test/CrsMatrix/CMakeLists.txt
+++ b/packages/tpetra/core/test/CrsMatrix/CMakeLists.txt
@@ -410,6 +410,17 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   STANDARD_PASS_OUTPUT
   )
 
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  CrsMatrix_Bug7745
+  SOURCES
+  Bug7745
+  ${TEUCHOS_STD_UNIT_TEST_MAIN}
+  ARGS
+  COMM mpi serial
+  STANDARD_PASS_OUTPUT
+  )
+
+
 SET(TIMING_INSTALLS "")
 
 INSTALL(TARGETS ${TIMING_INSTALLS}
