--- a/packages/muelu/research/regionMG/CMakeLists.txt
+++ b/packages/muelu/research/regionMG/CMakeLists.txt
@@ -1,5 +1,6 @@
 # based on experimental code
 IF (${PACKAGE_NAME}_ENABLE_Experimental)
+  ADD_SUBDIRECTORY(example)
   ADD_SUBDIRECTORY(src)
   ADD_SUBDIRECTORY(test)
 ENDIF()
