--- a/packages/muelu/research/regionMG/example/CMakeLists.txt
+++ b/packages/muelu/research/regionMG/example/CMakeLists.txt
@@ -16,6 +16,7 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     SOURCE_FILES
       elasticity_3d.xml
       poisson_3d.xml
+      structured_unstructured_1dof.xml
     )
 
   TRIBITS_ADD_TEST(
@@ -30,6 +31,14 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     RegionExampleDriver
     NAME "Structured_Region_Example_Poisson3D_27pt_stencil"
     ARGS "--linAlgebra=Tpetra --xml=poisson_3d.xml --matrixType=Brick3D --nx=28 --ny=28 --smootherIts=2"
+    COMM serial mpi
+    NUM_MPI_PROCS 4
+    )
+
+  TRIBITS_ADD_TEST(
+    RegionExampleDriver
+    NAME "Structured_Unstructured_Region_Example_Poisson3D_27pt_stencil"
+    ARGS "--linAlgebra=Tpetra --xml=structured_unstructured_1dof.xml --matrixType=Brick3D --nx=28 --ny=28 --nz=28 --smootherIts=2 --unstructured={1,2}"
     COMM serial mpi
     NUM_MPI_PROCS 4
     )
