Framework: reduce packages in testing build for installation testing

--- a/cmake/std/configs/trilinos_pr.ini
+++ b/cmake/std/configs/trilinos_pr.ini
@@ -124,11 +124,12 @@ installation_2: installation_testing_test.cmake
 # Entries in the ENABLE_MAP get inserted into the files:
 # - `packageEnables.cmake`
 # - `package_subproject_list.cmake` and
-# instead of using the TriBiTS tool to determine changes.
+#
+# Instead of using the TriBiTS tool to determine changes.
 Trilinos_pullrequest_python_2: TrilinosFrameworkTests
 Trilinos_pullrequest_python_3: TrilinosFrameworkTests
-Trilinos_pullrequest_gcc_8.3.0_installation_testing A: Teuchos
-Trilinos_pullrequest_gcc_8.3.0_installation_testing B: Tpetra
+Trilinos_pullrequest_gcc_8.3.0_installation_testing A: Kokkos
+# Trilinos_pullrequest_gcc_8.3.0_installation_testing B: Tpetra
 
 
 
