--- a/commonTools/framework/CMakeLists.txt
+++ b/commonTools/framework/CMakeLists.txt
@@ -61,12 +61,21 @@ TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverMerge_UnitTests
   )
 
 
+#TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverTest_UnitTests
+#  OVERALL_WORKING_DIRECTORY TEST_NAME
+#  OVERALL_NUM_MPI_PROCS 1
+#  EXCLUDE_IF_NOT_TRUE TFW_Python_Testing
+#  TEST_0 CMND ${PYTHON_EXECUTABLE} 
+#    ARGS ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std/unittests/TestPullRequestLinuxDriverTest.py -v
+#    PASS_REGULAR_EXPRESSION "OK"
+#  )
 TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverTest_UnitTests
   OVERALL_WORKING_DIRECTORY TEST_NAME
   OVERALL_NUM_MPI_PROCS 1
   EXCLUDE_IF_NOT_TRUE TFW_Python_Testing
+  OVERALL_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std
   TEST_0 CMND ${PYTHON_EXECUTABLE} 
-    ARGS ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std/unittests/TestPullRequestLinuxDriverTest.py -v
+    ARGS -m pytest -v
     PASS_REGULAR_EXPRESSION "OK"
   )
 
