Framework: PR Overhaul Debugging

--- a/cmake/std/configs/trilinos_pr.ini
+++ b/cmake/std/configs/trilinos_pr.ini
@@ -298,17 +298,17 @@ unsetenv PATH_TMP:
 
 
 [Trilinos_pullrequest_python_3]
-use SEMS-ENV              :
-use ATDM-ENV              :
-module-load sems-gcc      : 7.2.0
-use ATDM-DEFAULT          :
-module-load sems-git      : 2.10.1
-module-load sems-cmake    : 3.10.3
-module-unload sems-python :
-setenv PYTHONPATH         : /projects/sierra/linux_rh7/install/Python/extras/lib/python/3.6/site-packages
-setenv MANPATH            : /projects/sierra/linux_rh7/install/Python/3.6.3/share/man
-setenv PATH_TMP           : /projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}
-setenv PATH               : /projects/sierra/linux_rh7/install/Python/3.6.3/share/bin:${PATH_TMP}
-unsetenv PATH_TMP         :
+use SEMS-ENV:
+use ATDM-ENV:
+module-load sems-gcc: 7.2.0
+use ATDM-DEFAULT:
+module-load sems-git: 2.10.1
+module-load sems-cmake: 3.10.3
+module-unload sems-python:
+setenv PYTHONPATH: "/projects/sierra/linux_rh7/install/Python/extras/lib/python/3.6/site-packages"
+setenv MANPATH:    "/projects/sierra/linux_rh7/install/Python/3.6.10/share/man"
+setenv PATH_TMP:   "/projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}"
+setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.10/share/bin:${PATH_TMP}"
+unsetenv PATH_TMP:
 
 
