--- a/cmake/std/trilinosprhelpers/setenvironment/test/setenvironment_config.ini
+++ b/cmake/std/trilinosprhelpers/setenvironment/test/setenvironment_config.ini
@@ -123,7 +123,7 @@ module-unload sems-python:
 
 [TEST_PROFILE_005]:
 use TEST_PROFILE_001:
-setenv TEST_ENVVAR_002: "TEST_ENVVAR_002_VALUE + ${TEST_ENVVAR_001}"
+setenv TEST_ENVVAR_002  :  TEST_ENVVAR_002_VALUE/${TEST_ENVVAR_001}
 
 
 [TEST_PROFILE_006]:
