--- a/commonTools/framework/CMakeLists.txt
+++ b/commonTools/framework/CMakeLists.txt
@@ -76,7 +76,8 @@ TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverTest_UnitTests
   OVERALL_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std
   TEST_0 CMND ${PYTHON_EXECUTABLE} 
     ARGS -m pytest -v
-    PASS_REGULAR_EXPRESSION "OK"
+    #PASS_REGULAR_EXPRESSION "OK"
+    #FAIL_REGULAR_EXPRESSION "FAILED"
   )
 
 
