Tpetra: update Kokkos UVM test to only build when CUDA is enabled

--- a/packages/tpetra/core/test/KokkosIntegration/CMakeLists.txt
+++ b/packages/tpetra/core/test/KokkosIntegration/CMakeLists.txt
@@ -1,6 +1,8 @@
 
-TRIBITS_ADD_EXECUTABLE(
-  KokkosUVM
-  SOURCES KokkosUVM
-  COMM serial
-)
+IF (Tpetra_ENABLE_CUDA)
+  TRIBITS_ADD_EXECUTABLE(
+    KokkosUVM
+    SOURCES KokkosUVM
+    COMM serial
+  )
+ENDIF()
