Framework: PR Overhaul Troubleshooting (2020-09-08)

--- a/commonTools/framework/CMakeLists.txt
+++ b/commonTools/framework/CMakeLists.txt
@@ -61,23 +61,17 @@ TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverMerge_UnitTests
   )
 
 
-#TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverTest_UnitTests
-#  OVERALL_WORKING_DIRECTORY TEST_NAME
-#  OVERALL_NUM_MPI_PROCS 1
-#  EXCLUDE_IF_NOT_TRUE TFW_Python_Testing
-#  TEST_0 CMND ${PYTHON_EXECUTABLE} 
-#    ARGS ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std/unittests/TestPullRequestLinuxDriverTest.py -v
-#    PASS_REGULAR_EXPRESSION "OK"
-#  )
+# Run the discoverable unit tests under the cmake/std directory tree
 TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverTest_UnitTests
   OVERALL_WORKING_DIRECTORY TEST_NAME
   OVERALL_NUM_MPI_PROCS 1
   EXCLUDE_IF_NOT_TRUE TFW_Python_Testing
-  OVERALL_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std
   TEST_0 CMND ${PYTHON_EXECUTABLE} 
-    ARGS -m pytest -v
-    #PASS_REGULAR_EXPRESSION "OK"
-    #FAIL_REGULAR_EXPRESSION "FAILED"
+    ARGS -m pytest -v 
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std
+    SKIP_CLEAN_WORKING_DIRECTORY
+    FAIL_REGULAR_EXPRESSION "FAILED"
+    #ALWAYS_FAIL_ON_NONZERO_RETURN
   )
 
 
