--- a/commonTools/framework/CMakeLists.txt
+++ b/commonTools/framework/CMakeLists.txt
@@ -63,16 +63,27 @@ TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverMerge_UnitTests
 
 # Run the discoverable unit tests under the cmake/std directory tree
 TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverTest_UnitTests
-  OVERALL_WORKING_DIRECTORY TEST_NAME
-  OVERALL_NUM_MPI_PROCS 1
-  EXCLUDE_IF_NOT_TRUE TFW_Python_Testing
-  TEST_0 CMND ${PYTHON_EXECUTABLE} 
-    ARGS -m pytest -v 
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std
-    SKIP_CLEAN_WORKING_DIRECTORY
-    FAIL_REGULAR_EXPRESSION "FAILED"
-    #ALWAYS_FAIL_ON_NONZERO_RETURN
-  )
+    OVERALL_WORKING_DIRECTORY TEST_NAME
+    OVERALL_NUM_MPI_PROCS 1
+    EXCLUDE_IF_NOT_TRUE TFW_Python_Testing
+    TEST_0 CMND pr_python_test_driver.sh
+        ARGS ${PYTHON_EXECUTABLE} ${PYTHON_PIP_EXECUTABLE}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std
+        SKIP_CLEAN_WORKING_DIRECTORY
+        FAIL_REGULAR_EXPRESSION "FAILED"
+        #ALWAYS_FAIL_ON_NONZERO_RETURN
+)
+#TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverTest_UnitTests
+#  OVERALL_WORKING_DIRECTORY TEST_NAME
+#  OVERALL_NUM_MPI_PROCS 1
+#  EXCLUDE_IF_NOT_TRUE TFW_Python_Testing
+#  TEST_0 CMND ${PYTHON_EXECUTABLE} 
+#    ARGS -m pytest -v 
+#    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std
+#    SKIP_CLEAN_WORKING_DIRECTORY
+#    FAIL_REGULAR_EXPRESSION "FAILED"
+#    #ALWAYS_FAIL_ON_NONZERO_RETURN
+#  )
 
 
 FUNCTION(create_get_changed_trilinos_packages_test  TEST_POSTFIX
