Framework: PR Overhaul Troubleshooting (2020-09-10)

--- a/commonTools/framework/CMakeLists.txt
+++ b/commonTools/framework/CMakeLists.txt
@@ -66,8 +66,8 @@ TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverTest_UnitTests
     OVERALL_WORKING_DIRECTORY TEST_NAME
     OVERALL_NUM_MPI_PROCS 1
     EXCLUDE_IF_NOT_TRUE TFW_Python_Testing
-    TEST_0 CMND pr_python_test_driver.sh
-        ARGS ${PYTHON_EXECUTABLE} ${PYTHON_PIP_EXECUTABLE}
+    TEST_0 CMND bash 
+        ARGS pr_python_test_driver.sh ${PYTHON_EXECUTABLE} ${PYTHON_PIP_EXECUTABLE}
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std
         SKIP_CLEAN_WORKING_DIRECTORY
         FAIL_REGULAR_EXPRESSION "FAILED"
