--- a/packages/muelu/test/maxwell/CMakeLists.txt
+++ b/packages/muelu/test/maxwell/CMakeLists.txt
@@ -24,12 +24,30 @@ IF (${PACKAGE_NAME}_ENABLE_Belos)
     TRIBITS_ADD_TEST(
       Maxwell3D
       NAME "Maxwell3D-Tpetra"
-      ARGS "--linAlgebra=Tpetra"
+      ARGS "--linAlgebra=Tpetra --reuse --xml=Maxwell.xml"
+      ARGS "--linAlgebra=Tpetra --reuse --xml=Maxwell2.xml"
+      COMM mpi
+      NUM_MPI_PROCS 1
+      )
+
+    TRIBITS_ADD_TEST(
+      Maxwell3D
+      NAME "Maxwell3D-Tpetra"
+      ARGS "--linAlgebra=Tpetra --reuse --xml=Maxwell.xml"
+      ARGS "--linAlgebra=Tpetra --reuse --xml=Maxwell2.xml"
       COMM mpi
       NUM_MPI_PROCS 4
       )
 
     IF (${PACKAGE_NAME}_ENABLE_ML AND ${PACKAGE_NAME}_ENABLE_Epetra)
+      TRIBITS_ADD_TEST(
+        Maxwell3D
+        NAME "Maxwell3D-Tpetra-ML-list"
+        ARGS "--linAlgebra=Tpetra --xml=Maxwell_ML_MueLu.xml"
+        COMM mpi
+        NUM_MPI_PROCS 1
+        )
+
       TRIBITS_ADD_TEST(
         Maxwell3D
         NAME "Maxwell3D-Tpetra-ML-list"
@@ -43,7 +61,17 @@ IF (${PACKAGE_NAME}_ENABLE_Belos)
       TRIBITS_ADD_TEST(
         Maxwell3D
         NAME "Maxwell3D-Tpetra-Stratimikos"
-        ARGS "--linAlgebra=Tpetra --solverName=Stratimikos --instantiation=DOUBLE_INT_INT"
+        ARGS "--linAlgebra=Tpetra --solverName=Stratimikos --instantiation=DOUBLE_INT_INT --reuse --xml=Maxwell.xml"
+        ARGS "--linAlgebra=Tpetra --solverName=Stratimikos --instantiation=DOUBLE_INT_INT --reuse --xml=Maxwell2.xml"
+        COMM mpi
+        NUM_MPI_PROCS 1
+        )
+
+      TRIBITS_ADD_TEST(
+        Maxwell3D
+        NAME "Maxwell3D-Tpetra-Stratimikos"
+        ARGS "--linAlgebra=Tpetra --solverName=Stratimikos --instantiation=DOUBLE_INT_INT --reuse --xml=Maxwell.xml"
+        ARGS "--linAlgebra=Tpetra --solverName=Stratimikos --instantiation=DOUBLE_INT_INT --reuse --xml=Maxwell2.xml"
         COMM mpi
         NUM_MPI_PROCS 4
         )
@@ -54,12 +82,28 @@ IF (${PACKAGE_NAME}_ENABLE_Belos)
     TRIBITS_ADD_TEST(
       Maxwell3D
       NAME "Maxwell3D-Epetra"
-      ARGS "--linAlgebra=Epetra"
+      ARGS "--linAlgebra=Epetra --reuse --xml=Maxwell.xml"
+      COMM mpi
+      NUM_MPI_PROCS 1
+      )
+
+    TRIBITS_ADD_TEST(
+      Maxwell3D
+      NAME "Maxwell3D-Epetra"
+      ARGS "--linAlgebra=Epetra --reuse --xml=Maxwell.xml"
       COMM mpi
       NUM_MPI_PROCS 4
       )
 
     IF (${PACKAGE_NAME}_ENABLE_ML)
+      TRIBITS_ADD_TEST(
+        Maxwell3D
+        NAME "Maxwell3D-ML"
+        ARGS "--linAlgebra=Epetra --precType=ML-RefMaxwell  --xml=Maxwell_ML.xml"
+        COMM mpi
+        NUM_MPI_PROCS 1
+        )
+
       TRIBITS_ADD_TEST(
         Maxwell3D
         NAME "Maxwell3D-ML"
@@ -72,7 +116,7 @@ IF (${PACKAGE_NAME}_ENABLE_Belos)
 
 
   TRIBITS_COPY_FILES_TO_BINARY_DIR(Maxwell_cp
-    SOURCE_FILES M0.mat M1.mat S.mat D0.mat coords.mat Belos.xml Maxwell.xml Maxwell_ML.xml Maxwell_ML_MueLu.xml Maxwell_ML1.xml
+    SOURCE_FILES M0.mat M1.mat S.mat D0.mat coords.mat Belos.xml Maxwell.xml Maxwell2.xml Maxwell_ML.xml Maxwell_ML_MueLu.xml Maxwell_ML1.xml
     )
 
   IF(HAVE_MUELU_COMPLEX)
