Framework: PR driver overhaul - sync gcc 8.3.0 modules

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -220,8 +220,11 @@ use ATDM-ENV:
 module-load sems-gcc: 8.3.0
 module-load sems-ninja_fortran: 1.10.0
 use SEMS-DEFAULT:
+module-remove sems-cmake:
+module-remove sems-boost:
 use ATDM-DEFAULT:
-# module-load sems-cmake: 3.17.1
+module-load sems-boost: 1.66.0/base
+module-load sems-cmake: 3.17.1
 setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 4.9.3
 
 
