Framework: PR driver overhaul - correct optons for intel compiler

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -232,10 +232,11 @@ setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 4.9.3
 [Trilinos_pullrequest_intel_17.0.1]
 use SEMS-ENV:
 use ATDM-ENV:
-module-load sems-gcc: 4.9.3
+module-load sems-gcc: 5.3.0
 module-load sems-intel: 17.0.1
 module-load sems-mpich: 3.2
 use SEMS-DEFAULT:
+module-remove sems-openmpi:
 use ATDM-DEFAULT:
 setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 4.9.3
 
