Framework: PR driver overhaul - Add GCC 7.2.0 Debug build

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -214,6 +214,11 @@ setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 4.9.3
 
 
 
+[Trilinos_pullrequest_gcc_7.2.0_debug]
+use Trilinos_pullrequest_gcc_7.2.0:
+
+
+
 [Trilinos_pullrequest_gcc_8.3.0]
 use SEMS-ENV:
 use ATDM-ENV:
