--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -82,6 +82,7 @@
 # Clang Builds
 Trilinos_pullrequest_clang_7.0.1:      PullRequestLinuxClang7.0.1TestingSettings.cmake
 Trilinos_pullrequest_clang_9.0.0:      PullRequestLinuxClang9.0.0TestingSettings.cmake
+Trilinos_pullrequest_clang_10.0.0:     PullRequestLinuxClang10.0.0TestingSettings.cmake
 
 # CUDA Testing
 Trilinos_pullrequest_cuda_9.2:         PullRequestLinuxCuda9.2TestingSettings.cmake
@@ -90,6 +91,8 @@ Trilinos_pullrequest_cuda_9.2:         PullRequestLinuxCuda9.2TestingSettings.cm
 Trilinos_pullrequest_gcc_4.8.4:        PullRequestLinuxGCC4.8.4TestingSettings.cmake
 Trilinos_pullrequest_gcc_4.9.3_SERIAL: PullRequestLinuxGCC4.9.3TestingSettingsSERIAL.cmake
 Trilinos_pullrequest_gcc_7.2.0:        PullRequestLinuxGCC7.2.0TestingSettings.cmake
+Trilinos_pullrequest_gcc_7.2.0_debug:  PullRequestLinuxGCC7.2.0DebugTestingSettings.cmake
+Trilinos_pullrequest_gcc_7.2.0_serial: PullRequestLinuxGCC7.2.0SerialTestingSettings.cmake
 Trilinos_pullrequest_gcc_8.3.0:        PullRequestLinuxGCC8.3.0TestingSettings.cmake
 
 # Intel Builds
@@ -219,6 +222,25 @@ use Trilinos_pullrequest_gcc_7.2.0:
 
 
 
+[Trilinos_pullrequest_gcc_7.2.0_serial]
+use SEMS-ENV:
+module-load sems-git: 2.10.1
+module-load sems-gcc: 7.2.0
+module-load sems-python: 2.7.9
+module-load sems-boost: 1.63.0/base
+module-load sems-zlib: 1.2.8/base
+module-load sems-hdf5: 1.10.6/base
+module-load sems-netcdf: 4.7.3/base
+module-load sems-metis: 5.1.0/base
+module-load sems-superlu: 4.3/base
+module-load sems-cmake: 3.10.3
+use ATDM-ENV:
+module-load atdm-ninja_fortran: 1.7.2
+setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 4.9.3
+setenv OMP_NUM_THREADS: 2
+
+
+
 [Trilinos_pullrequest_gcc_8.3.0]
 use SEMS-ENV:
 use ATDM-ENV:
@@ -269,6 +291,28 @@ use ATDM-DEFAULT:
 module-remove sems-cmake:
 module-load sems-cmake: 3.12.2
 setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 5.3.0
+
+
+
+[Trilinos_pullrequest_clang_10.0.0]
+use SEMS-ENV:
+module-load sems-git: 2.10.1
+module-load sems-gcc: 5.3.0
+module-load sems-clang: 10.0.0
+module-load sems-openmpi: 1.10.1
+module-load sems-python: 2.7.9
+module-load sems-boost: 1.69.0/base
+module-load sems-zlib: 1.2.8/base
+module-load sems-hdf5: 1.10.6/parallel
+module-load sems-netcdf: 4.7.3/parallel
+module-load sems-parmetis: 4.0.3/parallel
+module-load sems-scotch: 6.0.3/nopthread_64bit_parallel
+module-load sems-superlu: 4.3/base
+module-load sems-cmake: 3.17.1
+module-load sems-ninja_fortran: 1.10.0
+
+setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 5.3.0
+setenv OMP_NUM_THREADS: 2
 
 
 
