MueLu: Allow both Tpetra and Eptra versions of duplicate tests (#8110)
Before, just the first duplicate test was gettting defined and the second was
being ignored.  Therefore, the Tpetra version of the test MueLu_Stratimikos
was never getting run and the Epetra version of the test MueLu_Redirection was
never getting run.

I renamed them with postfixes '_Tpetra' and '_Epetra' to allow both of the
tests to get defined and run.

I will try to allow enable these tests to see if they pass PR testing.  If
not, I will disable the test that was not getting run in the next commit.

--- a/packages/muelu/example/basic/CMakeLists.txt
+++ b/packages/muelu/example/basic/CMakeLists.txt
@@ -70,7 +70,7 @@ IF(${PACKAGE_NAME}_ENABLE_Stratimikos AND ${PACKAGE_NAME}_ENABLE_Thyra)
 
     TRIBITS_ADD_TEST(
       Stratimikos
-      NAME Stratimikos
+      NAME Stratimikos_Epetra
       ARGS "--xml=stratimikos_ParameterList2.xml --linAlgebra=Epetra"
       NUM_MPI_PROCS 4
       COMM serial mpi
@@ -82,7 +82,7 @@ IF(${PACKAGE_NAME}_ENABLE_Stratimikos AND ${PACKAGE_NAME}_ENABLE_Thyra)
 
     TRIBITS_ADD_TEST(
       Stratimikos
-      NAME Stratimikos
+      NAME Stratimikos_Tpetra
       ARGS "--xml=stratimikos_ParameterList2.xml --linAlgebra=Tpetra"
       NUM_MPI_PROCS 4
       COMM serial mpi
