MueLu: Update CMakeLists so regionMG source is accessible by external packages if MueLu_ENABLE_Experimental is on

--- a/packages/muelu/CMakeLists.txt
+++ b/packages/muelu/CMakeLists.txt
@@ -457,7 +457,7 @@ ENDIF()
 
 
 TRIBITS_ADD_EXAMPLE_DIRECTORIES(example)
-TRIBITS_ADD_EXAMPLE_DIRECTORIES(research)
+ADD_SUBDIRECTORY(research)
 TRIBITS_ADD_TEST_DIRECTORIES(test)
 
 #
