--- a/packages/muelu/research/regionMG/CMakeLists.txt
+++ b/packages/muelu/research/regionMG/CMakeLists.txt
@@ -1,8 +1,8 @@
 # based on experimental code
 IF (${PACKAGE_NAME}_ENABLE_Experimental)
-  ADD_SUBDIRECTORY(example)
+  TRIBITS_ADD_EXAMPLE_DIRECTORIES(example)
   ADD_SUBDIRECTORY(src)
-  ADD_SUBDIRECTORY(test)
+  TRIBITS_ADD_EXAMPLE_DIRECTORIES(test)
 ENDIF()
 
 
