--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -87,7 +87,7 @@ Trilinos_pullrequest_clang_10.0.0:     PullRequestLinuxClang10.0.0TestingSetting
 # CUDA Testing
 Trilinos_pullrequest_cuda_9.2:         PullRequestLinuxCuda9.2TestingSettings.cmake
 Trilinos_pullrequest_cuda_10.1.105:         PullRequestLinuxCuda10.1.105TestingSettings.cmake
-
+Trilinos_pullrequest_cuda_10.1.243:    PullRequestLinuxCuda10.1.243TestingSettings.cmake
 
 # GCC Builds
 Trilinos_pullrequest_gcc_4.8.4:        PullRequestLinuxGCC4.8.4TestingSettings.cmake
@@ -360,6 +360,20 @@ setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
 setenv OMPI_CC: ${CC}
 setenv OMPI_FC: ${FC}
 setenv CUDA_LAUNCH_BLOCKING: 0
+setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
+setenv PATH_TMP: /ascldap/users/rabartl/install/white-ride/ninja-1.8.2/bin:${PATH}
+setenv PATH:     /ascldap/users/rabartl/install/white-ride/cmake-3.11.2/bin:${PATH_TMP}
+unsetenv PATH_TMP:
+
+
+[Trilinos_pullrequest_cuda_10.1.243]
+module-load StdEnv: 
+module-load sparc-dev: cuda-10.1.243_gcc-7.3.1_spmpi-rolling
+module-swap gcc/7.3.1: gcc/8.3.1
+setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
+setenv OMPI_CC: ${CC}
+setenv OMPI_FC: ${FC}
+setenv CUDA_LAUNCH_BLOCKING: 1
 setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
 setenv PATH_TMP: /ascldap/users/rabartl/install/white-ride/ninja-1.8.2/bin:${PATH}
 setenv PATH:     /ascldap/users/rabartl/install/white-ride/cmake-3.11.2/bin:${PATH_TMP}
