--- a/packages/phalanx/cmake/Phalanx_config.hpp.in
+++ b/packages/phalanx/cmake/Phalanx_config.hpp.in
@@ -24,6 +24,8 @@
 
 #cmakedefine PHX_ENABLE_KOKKOS_AMT
 
+#cmakedefine PHX_USE_DEPRECATED_DEVICE_DEFINITION
+
 @PHALANX_DEPRECATED_DECLARATIONS@
 
 #endif
