MueLu: Add muelu_add_serial_and_mpi_test() (#8173)
This restores 1-proc tests in a non-MPI build that got removed by the changes
in PR #8115 (see #8110) and it also adds these 1-proc tests to the MPI build
as well.

With this change, the MueLu test suite for an MPI build should be a superset
of the tests run in a non-MPI build.

However, I see several 1-proc tests that are only defined to run in an MPI
build (with 'COMM mpi') but should likely also be run in a non-MPI build as
well.

--- a/packages/muelu/example/basic/CMakeLists.txt
+++ b/packages/muelu/example/basic/CMakeLists.txt
@@ -68,7 +68,7 @@ IF(${PACKAGE_NAME}_ENABLE_Stratimikos AND ${PACKAGE_NAME}_ENABLE_Thyra)
 
   IF (${PACKAGE_NAME}_HAVE_EPETRA_SOLVER_STACK)
 
-    TRIBITS_ADD_TEST(
+    MUELU_ADD_SERIAL_AND_MPI_TEST(
       Stratimikos
       NAME Stratimikos_Epetra
       ARGS "--xml=stratimikos_ParameterList2.xml --linAlgebra=Epetra"
@@ -80,7 +80,7 @@ IF(${PACKAGE_NAME}_ENABLE_Stratimikos AND ${PACKAGE_NAME}_ENABLE_Thyra)
 
   IF (${PACKAGE_NAME}_HAVE_TPETRA_SOLVER_STACK)
 
-    TRIBITS_ADD_TEST(
+    MUELU_ADD_SERIAL_AND_MPI_TEST(
       Stratimikos
       NAME Stratimikos_Tpetra
       ARGS "--xml=stratimikos_ParameterList2.xml --linAlgebra=Tpetra"
