Framework: PR Driver Overhaul - 2020-10-21 - Bugfix to SetEnvironment module-purge command

--- a/cmake/std/trilinosprhelpers/setenvironment/unittests/setenvironment_config.ini
+++ b/cmake/std/trilinosprhelpers/setenvironment/unittests/setenvironment_config.ini
@@ -13,6 +13,9 @@
 #
 # Commands
 # --------
+# - module-purge:
+#   + Purges all loaded modules. Equivalent to `$ module purge`
+#
 # - module-use: <path>
 #   + This defines a path for the module system to use to discover modules.
 #
@@ -131,3 +134,21 @@ use TEST_PROFILE_001:
 module-swap sems-python/3.5.2: sems-python/3.8.0
 
 
+[GCC_1.0]
+module-load gcc: 1.0
+
+[GCC_2.0]
+use GCC_1.0:
+# module-unload gcc: 1.0
+module-load gcc: 2.0
+
+[Module_Remove]
+use GCC_2.0:
+module-remove gcc:
+
+[Module_Unload]:
+use GCC_2.0:
+module-unload gcc:
+
+[Module_Purge]:
+module-purge:
