Xpetra: remove commented obsolete CMake code

--- a/packages/xpetra/test/CMakeLists.txt
+++ b/packages/xpetra/test/CMakeLists.txt
@@ -22,7 +22,7 @@ ADD_SUBDIRECTORIES(
 # uncomment this to ensure Xpetra header files include all necessary dependencies
 #ADD_SUBDIRECTORY(compile_tests)
 
-IF (${PACKAGE_NAME}_ENABLE_Epetra) # AND ${PROJECT_NAME}_ENABLE_DEVELOPMENT_MODE)
+IF (${PACKAGE_NAME}_ENABLE_Epetra)
   ADD_SUBDIRECTORIES(
     BlockedCrsMatrix
   )
