Framework: Removing python2 use from PR driver scripts

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -163,6 +163,7 @@ module-load sems-scotch   : 6.0.3/nopthread_64bit_parallel
 module-load sems-superlu  : 4.3/base
 module-load sems-git      : 2.10.1
 module-load sems-cmake    : 3.10.3
+module-load sems-python: 3.5.2
 setenv OMP_NUM_THREADS    : 2
 
 
@@ -224,7 +225,8 @@ use Trilinos_pullrequest_gcc_7.2.0:
 use SEMS-ENV:
 module-load sems-git: 2.10.1
 module-load sems-gcc: 7.2.0
-module-load sems-python: 2.7.9
+#module-load sems-python: 2.7.9
+module-load sems-python: 3.5.2
 module-load sems-boost: 1.63.0/base
 module-load sems-zlib: 1.2.8/base
 module-load sems-hdf5: 1.10.6/base
@@ -298,7 +300,8 @@ module-load sems-git: 2.10.1
 module-load sems-gcc: 5.3.0
 module-load sems-clang: 10.0.0
 module-load sems-openmpi: 1.10.1
-module-load sems-python: 2.7.9
+#module-load sems-python: 2.7.9
+module-load sems-python: 3.5.2
 module-load sems-boost: 1.69.0/base
 module-load sems-zlib: 1.2.8/base
 module-load sems-hdf5: 1.10.6/parallel
@@ -332,6 +335,8 @@ unsetenv PATH_TMP:
 use Trilinos_pullrequest_gcc_8.3.0:
 
 
+# TODO: Remove this whole section once we've removed
+#       Python2 test execution
 [Trilinos_pullrequest_python_2]
 use SEMS-ENV:
 use ATDM-ENV:
@@ -354,11 +359,15 @@ module-load sems-gcc: 7.2.0
 use ATDM-DEFAULT:
 module-load sems-git: 2.10.1
 module-load sems-cmake: 3.10.3
-module-unload sems-python:
-setenv PYTHONPATH: "/projects/sierra/linux_rh7/install/Python/extras/lib/python/3.6/site-packages"
-setenv MANPATH:    "/projects/sierra/linux_rh7/install/Python/3.6.10/share/man"
-setenv PATH_TMP:   "/projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}"
-setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.10/share/bin:${PATH_TMP}"
-unsetenv PATH_TMP:
+#module-unload sems-python:
+#setenv PYTHONPATH: "/projects/sierra/linux_rh7/install/Python/extras/lib/python/3.6/site-packages"
+#setenv MANPATH:    "/projects/sierra/linux_rh7/install/Python/3.6.10/share/man"
+#setenv PATH_TMP:   "/projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}"
+#setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.10/share/bin:${PATH_TMP}"
+#unsetenv PATH_TMP:
+module-remove sems-python:
+module-load sems-python: 3.5.2
+setenv PYTHONPATH: "${SEMS_PYTHON_LIBRARY_PATH}/python3.5/site-packages"
+setenv MANPATH:    "${SEMS_PYTHON_LIBRARY_PATH}/../share/man"
 
 
