Framework: Removing python2 use from PR driver scripts (2)

--- a/cmake/std/trilinosprhelpers/unittests/trilinos_pr_test.ini
+++ b/cmake/std/trilinosprhelpers/unittests/trilinos_pr_test.ini
@@ -96,7 +96,7 @@ Trilinos_pullrequest_gcc_8.3.0:        PullRequestLinuxGCC8.3.0TestingSettings.c
 Trilinos_pullrequest_intel_17.0.1:     PullRequestLinuxIntelTestingSettings.cmake
 
 # Python PR Driver Builds
-Trilinos_pullrequest_python_2:         PullRequestLinuxPython2.cmake
+#Trilinos_pullrequest_python_2:         PullRequestLinuxPython2.cmake
 Trilinos_pullrequest_python_3:         PullRequestLinuxPython3.cmake
 
 # Installation Testing
@@ -265,19 +265,19 @@ unsetenv PATH_TMP:
 use Trilinos_pullrequest_gcc_8.3.0:
 
 
-[Trilinos_pullrequest_python_2]
-use SEMS-ENV:
-use ATDM-ENV:
-module-load sems-gcc: 7.2.0
-use ATDM-DEFAULT:
-module-load sems-git: 2.10.1
-module-load sems-cmake: 3.10.3
-module-unload sems-python:
-setenv PYTHONPATH: /projects/sierra/linux_rh7/install/Python/extras/lib/python2.7/site-packages
-setenv MANPATH:    /projects/sierra/linux_rh7/install/Python/2.7.15/share/man
-setenv PATH_TMP:   /projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}
-setenv PATH:       /projects/sierra/linux_rh7/install/Python/2.7.15/share/bin:${PATH_TMP}
-unsetenv PATH_TMP:
+#[Trilinos_pullrequest_python_2]
+#use SEMS-ENV:
+#use ATDM-ENV:
+#module-load sems-gcc: 7.2.0
+#use ATDM-DEFAULT:
+#module-load sems-git: 2.10.1
+#module-load sems-cmake: 3.10.3
+#module-unload sems-python:
+#setenv PYTHONPATH: /projects/sierra/linux_rh7/install/Python/extras/lib/python2.7/site-packages
+#setenv MANPATH:    /projects/sierra/linux_rh7/install/Python/2.7.15/share/man
+#setenv PATH_TMP:   /projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}
+#setenv PATH:       /projects/sierra/linux_rh7/install/Python/2.7.15/share/bin:${PATH_TMP}
+#unsetenv PATH_TMP:
 
 
 [Trilinos_pullrequest_python_3]
