Framework: Debugging Python2.x removal work (2020-11-05)

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -233,7 +233,7 @@ module-load sems-hdf5: 1.10.6/base
 module-load sems-netcdf: 4.7.3/base
 module-load sems-metis: 5.1.0/base
 module-load sems-superlu: 4.3/base
-module-load sems-cmake: 3.10.3
+module-load sems-cmake: 3.12.2
 use ATDM-ENV:
 module-load atdm-ninja_fortran: 1.7.2
 setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 4.9.3
@@ -247,11 +247,9 @@ use ATDM-ENV:
 module-load sems-gcc: 8.3.0
 module-load sems-ninja_fortran: 1.10.0
 use SEMS-DEFAULT:
-module-remove sems-cmake:
-module-remove sems-boost:
 use ATDM-DEFAULT:
+module-remove sems-boost:
 module-load sems-boost: 1.66.0/base
-module-load sems-cmake: 3.17.1
 setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 4.9.3
 
 
@@ -276,8 +274,6 @@ module-load sems-gcc: 5.3.0
 module-load sems-clang: 7.0.1
 use SEMS-DEFAULT:
 use ATDM-DEFAULT:
-module-remove sems-cmake:
-module-load sems-cmake: 3.12.2
 setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 5.3.0
 
 
@@ -289,8 +285,6 @@ module-load sems-gcc: 5.3.0
 module-load sems-clang: 9.0.0
 use SEMS-DEFAULT:
 use ATDM-DEFAULT:
-module-remove sems-cmake:
-module-load sems-cmake: 3.12.2
 setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 5.3.0
 
 
@@ -301,7 +295,6 @@ module-load sems-git: 2.10.1
 module-load sems-gcc: 5.3.0
 module-load sems-clang: 10.0.0
 module-load sems-openmpi: 1.10.1
-#module-load sems-python: 2.7.9
 module-load sems-python: 3.5.2
 module-load sems-boost: 1.69.0/base
 module-load sems-zlib: 1.2.8/base
@@ -310,7 +303,7 @@ module-load sems-netcdf: 4.7.3/parallel
 module-load sems-parmetis: 4.0.3/parallel
 module-load sems-scotch: 6.0.3/nopthread_64bit_parallel
 module-load sems-superlu: 4.3/base
-module-load sems-cmake: 3.17.1
+module-load sems-cmake: 3.12.2
 module-load sems-ninja_fortran: 1.10.0
 
 setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 5.3.0
@@ -353,6 +346,14 @@ use Trilinos_pullrequest_gcc_8.3.0:
 #unsetenv PATH_TMP:
 
 
+[SIERRA-PYTHON-3.6.3]
+module-unload sems-python:
+setenv MANPATH:    "/projects/sierra/linux_rh7/install/Python/3.6.3/share/man"
+setenv PATH_TMP:   "/projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}"
+setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.3/share/bin:${PATH_TMP}"
+unsetenv PATH_TMP:
+
+
 [Trilinos_pullrequest_python_3]
 use SEMS-ENV:
 use ATDM-ENV:
@@ -360,12 +361,13 @@ module-load sems-gcc: 7.2.0
 use ATDM-DEFAULT:
 module-load sems-git: 2.10.1
 module-load sems-cmake: 3.10.3
-module-unload sems-python:
-#setenv PYTHONPATH: "/projects/sierra/linux_rh7/install/Python/extras/lib/python/3.6/site-packages"
-setenv MANPATH:    "/projects/sierra/linux_rh7/install/Python/3.6.3/share/man"
-setenv PATH_TMP:   "/projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}"
-setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.3/share/bin:${PATH_TMP}"
-unsetenv PATH_TMP:
+use SIERRA-PYTHON-3.6.3:
+##module-unload sems-python:
+###setenv PYTHONPATH: "/projects/sierra/linux_rh7/install/Python/extras/lib/python/3.6/site-packages"
+##setenv MANPATH:    "/projects/sierra/linux_rh7/install/Python/3.6.3/share/man"
+##setenv PATH_TMP:   "/projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}"
+##setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.3/share/bin:${PATH_TMP}"
+##unsetenv PATH_TMP:
 #module-remove sems-python:
 #module-load sems-python: 3.5.2
 #setenv PYTHONPATH: "${SEMS_PYTHON_LIBRARY_PATH}/python3.5/site-packages"
