Framework: Debugging Python2.x removal work (2020-11-05)

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -145,6 +145,15 @@ max-test-parallelism : 4
 
 
 
+[SIERRA-PYTHON-3.6.3]
+module-unload sems-python:
+setenv MANPATH:    "/projects/sierra/linux_rh7/install/Python/3.6.3/share/man"
+setenv PATH_TMP:   "/projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}"
+setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.3/share/bin:${PATH_TMP}"
+unsetenv PATH_TMP:
+
+
+
 [SEMS-ENV]
 module-purge:
 module-use: /projects/sems/modulefiles/projects
@@ -163,7 +172,8 @@ module-load sems-scotch   : 6.0.3/nopthread_64bit_parallel
 module-load sems-superlu  : 4.3/base
 module-load sems-git      : 2.10.1
 module-load sems-cmake    : 3.10.3
-module-load sems-python: 3.5.2
+#module-load sems-python: 3.5.2
+module-use SIERRA-PYTHON-3.6.3:
 setenv OMP_NUM_THREADS    : 2
 
 
@@ -226,7 +236,8 @@ use SEMS-ENV:
 module-load sems-git: 2.10.1
 module-load sems-gcc: 7.2.0
 #module-load sems-python: 2.7.9
-module-load sems-python: 3.5.2
+#module-load sems-python: 3.5.2
+module-use SIERRA-PYTHON-3.6.3:
 module-load sems-boost: 1.63.0/base
 module-load sems-zlib: 1.2.8/base
 module-load sems-hdf5: 1.10.6/base
@@ -295,7 +306,8 @@ module-load sems-git: 2.10.1
 module-load sems-gcc: 5.3.0
 module-load sems-clang: 10.0.0
 module-load sems-openmpi: 1.10.1
-module-load sems-python: 3.5.2
+#module-load sems-python: 3.5.2
+module-use SIERRA-PYTHON-3.6.3:
 module-load sems-boost: 1.69.0/base
 module-load sems-zlib: 1.2.8/base
 module-load sems-hdf5: 1.10.6/parallel
@@ -345,13 +357,6 @@ use Trilinos_pullrequest_gcc_8.3.0:
 #setenv PATH:       /projects/sierra/linux_rh7/install/Python/2.7.15/share/bin:${PATH_TMP}
 #unsetenv PATH_TMP:
 
-
-[SIERRA-PYTHON-3.6.3]
-module-unload sems-python:
-setenv MANPATH:    "/projects/sierra/linux_rh7/install/Python/3.6.3/share/man"
-setenv PATH_TMP:   "/projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}"
-setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.3/share/bin:${PATH_TMP}"
-unsetenv PATH_TMP:
 
 
 [Trilinos_pullrequest_python_3]
