Framework: Debugging Python2.x removal work (2020-11-09)

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -261,6 +261,10 @@ use SEMS-DEFAULT:
 use ATDM-DEFAULT:
 module-remove sems-boost:
 module-load sems-boost: 1.66.0/base
+module-remove sems-cmake:
+# The GCC 3.8.2 build appears to have an issue that fails with cmake/3.10.3
+# - Trying 3.12.2 and if that fails we'll try 3.17.1
+module-load sems-cmake: 3.12.2
 setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 4.9.3
 
 
